outputs/main/reevo-qd_bpp_online_2025-08-07_22-29-22/problem_iter6_response0.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 25
    We need to correct: The line "_ema_item_sq = (1 - _alpha_ema) * _ema_item_sq + _alpha_ema * (item * item)". Let's write that.
                                                                                                                   ^
SyntaxError: unterminated string literal (detected at line 25)
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 25
    We need to correct: The line "_ema_item_sq = (1 - _alpha_ema) * _ema_item_sq + _alpha_ema * (item * item)". Let's write that.
                                                                                                                   ^
SyntaxError: unterminated string literal (detected at line 25)
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 25
    We need to correct: The line "_ema_item_sq = (1 - _alpha_ema) * _ema_item_sq + _alpha_ema * (item * item)". Let's write that.
                                                                                                                   ^
SyntaxError: unterminated string literal (detected at line 25)
